fix: Minimal theme: width of toolbar below props too wide #204

--- a/styles.css
+++ b/styles.css
@@ -1375,6 +1375,13 @@ body {
     }
     /* width: var(--var-max-width);
     max-width: var(--var-max-width); */
+
+    /* width fix for Minimal theme in props position #204 */
+    &[data-csstheme="Minimal"][data-tbar-position="props"] {
+        max-width: var(--max-width);
+        width: var(--line-width);
+        margin-inline: var(--content-margin)!important;
+    }
 }
 
 .cg-note-toolbar-position-top,
